@@ -1,4 +1,8 @@
-﻿drkns 19.05.2016 00:40:27 +0200 - build 4679
+﻿drkns 19.05.2016 01:35:59 +0200 - build 4680
+
+1. Уточнение 4679.
+
+drkns 19.05.2016 00:40:27 +0200 - build 4679
 
 1. Продолжение экспериментов с запускателем:
    - тип запуска (консольный с ожиданием / тихий без ожидания) теперь определяется и для системных ассоциаций тоже.
